--- a/_assets/css/reset.css
+++ b/_assets/css/reset.css
@@ -1,1 +1,6 @@
 /* Anything */
+
+/* @import "../css-lib/vanilla/vanilla.min.css"; */
+
+/* @import "../css-lib/tripoli/tripoli-simple-ie.min.css"; */
+/* @import "../css-lib/tripoli/tripoli-simple.min.css"; */
