--- a/_assets/css/global.scss
+++ b/_assets/css/global.scss
@@ -185,6 +185,7 @@ table { border-collapse: collapse; border-spacing: 0; }
    ================================================================================== */
 
 $bodyBackground: #e0e0e0;
+$white: #ffffff;
 
 
 /* ==================================================================================
@@ -199,8 +200,8 @@ $bodyBackground: #e0e0e0;
 
 /* =============================================================== BODY CLASS SETS == */
 
-body { background: $bodyBackground; }
-body._site_domain-com { background: pink; } 
+body { background: $white; }
+body._site_domain-com { background: $white; } 
 body._templatename-base { } 
 body._pagename-TBD { }
 
