--- a/_assets/css/global.scss
+++ b/_assets/css/global.scss
@@ -221,12 +221,58 @@ body._page-name_TBD { }
 
 
 /* ==================================================================================
+   DOCUMENT: BASE (DEFAULTS)
+   ================================================================================== */
+
+body {
+
+/* =============================================================== CONTAINER == */
+
+    .container {
+    
+/* =============================================================== HEADER == */
+
+    .header-base { 
+      padding: 20px; }
+    
+/* =============================================================== CONTENT == */
+
+    .content-base { }
+    
+/* =============================================================== FOOTER == */
+
+    .footer-base {
+      background: orange;
+      padding: 20px; 
+      p { margin: 0; } }
+      
+    } } /* End body */
+
+
+/* ==================================================================================
    TEMPLATE: BASE
    ================================================================================== */
 
 body._template-name_base { 
     background: #fff;
-}
+    
+/* =============================================================== CONTAINER == */
+
+    .container { 
+    
+/* =============================================================== HEADER == */
+    
+    .header-base { }
+    
+/* =============================================================== CONTENT == */
+
+    .content-base { }
+    
+/* =============================================================== FOOTER == */
+
+    .footer-base { }
+      
+    } } /* End body._template-name_base */
 
 
 /* ==================================================================================
@@ -235,31 +281,44 @@ body._template-name_base {
 
 body._template-name_threeboxes { 
     background: #e0e0e0;
+
+/* =============================================================== CONTAINER == */
     
     .container { 
         margin: 0 auto; 
         width: 864px;
+    
+/* =============================================================== HEADER == */
+
+    //.header-threeboxes { }
+    .header-base { 
+        background: pink; }
         
+/* =============================================================== CONTENT == */
+        
+    .content-base {
         .box { 
-          p { margin: 0; } }
+          p { margin: 0; } 
+          .inner { padding: 20px; } }
         .box-stage { 
           outline: 1px solid gold; 
           width: 100%; }
         .box-row { 
           
           @include clearfix;
-          
+          .inner { padding: 0; }
           .box-stage { 
             float: left;
-            width: 50%; } } }
+            width: 50%; 
+            .inner { padding: 20px; } } } }
     
-    //.header-threeboxes { }
-    .header-base { 
-        background: pink; }
-    
+/* =============================================================== FOOTER == */
+
     //.footer-threeboxes { }
-    .footer-base { }
-}
+    .footer-base {
+      background: orange; }
+    
+    } } /* End body._template-name_threeboxes */
 
 
 /* ==================================================================================
